--- a/config/database.yml
+++ b/config/database.yml
@@ -3,10 +3,10 @@ default: &default
   encoding: unicode
   database: desafio_ninja_devel
   pool: 5
-  host: localhost
+  host: postgres
   timeout: 5000
-  username: <%= 'rails' %>
-  password: <%= '1q2w3e' %>
+  username: <%= 'postgres' %>
+  password: <%= 'password' %>
   port: 5432
 
 development:
